syntax = "proto3";

package stockpb;

option go_package = "github.com/FacundoChan/gorder-v1/common/genproto/stockpb";

import "orderpb/order.proto";

service StockService {
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
  rpc CheckIfItemsInStock(CheckIfItemsInStockRequest) returns (CheckIfItemsInStockResponse);
  rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse);
}

message GetItemsRequest {
  repeated string ItemIDs = 1;
}

message GetItemsResponse {
  repeated orderpb.Item Items = 1;
}

message CheckIfItemsInStockRequest {
  repeated orderpb.ItemWithQuantity Items = 1;
}

message CheckIfItemsInStockResponse {
  int32 InStock = 1;
  repeated orderpb.Item Items = 2;
}

message GetAllProductsRequest {}

message GetAllProductsResponse {
  repeated orderpb.Product Products = 1;
}
